tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-entry-missing-name/expected.err
Error: invalid syntax: invalid symbolic subscript field declaration '.:word': expected field name after '.'; inside brackets: [
  .a:byte,
  .:word
]
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-entry-missing-name/input.k65:3:4 ]
   │
 3 │   .:word
   │    ┬  
   │    ╰── here
───╯
